{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 185,
  "lineage": "631b37bb-2deb-2e98-004c-1bf5153e204f",
  "resources": [
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:internet-gateway/igw-0b6ee19c17cf07459",
            "id": "igw-0b6ee19c17cf07459",
            "owner_id": "590184123325",
            "tags": {
              "Name": "iVolve-vpc-igw"
            },
            "tags_all": {
              "Name": "iVolve-vpc-igw"
            },
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-rtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:route-table/rtb-003b35ac701b1b728",
            "id": "rtb-003b35ac701b1b728",
            "owner_id": "590184123325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6ee19c17cf07459",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iVolve-vpc-rtb-public"
            },
            "tags_all": {
              "Name": "iVolve-vpc-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_igw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cea5cf2686d0c0c",
            "route_table_id": "rtb-003b35ac701b1b728",
            "subnet_id": "subnet-0fb5fe31b466db357"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_route_table.igw-rtw",
            "module.Network.aws_subnet.public_subnet",
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:subnet/subnet-0361dc981e189f1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0361dc981e189f1ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184123325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet"
            },
            "tags_all": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:subnet/subnet-0fb5fe31b466db357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb5fe31b466db357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184123325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet"
            },
            "tags_all": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:vpc/vpc-06b27a425c98100c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ceb506adc4797de0",
            "default_route_table_id": "rtb-0e0bed5b2a9ba1b54",
            "default_security_group_id": "sg-02b78ec696c654929",
            "dhcp_options_id": "dopt-00d99b24c8756977b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b27a425c98100c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0bed5b2a9ba1b54",
            "owner_id": "590184123325",
            "tags": {
              "Name": "iVolve-vpc"
            },
            "tags_all": {
              "Name": "iVolve-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group/sg-0da8d3174189c73ec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0da8d3174189c73ec",
            "ingress": [],
            "name": "terraform-20240601002101256300000001",
            "name_prefix": "terraform-",
            "owner_id": "590184123325",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group-rule/sgr-09dd9e5962e1b8da2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09dd9e5962e1b8da2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da8d3174189c73ec",
            "security_group_rule_id": "sgr-09dd9e5962e1b8da2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.aws_ec2.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group-rule/sgr-0021c072245b2e36a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0021c072245b2e36a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da8d3174189c73ec",
            "security_group_rule_id": "sgr-0021c072245b2e36a",
            "tags": {
              "Name": "ingress"
            },
            "tags_all": {
              "Name": "ingress"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.aws_ec2.aws_security_group.sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group-rule/sgr-0197a32b436921fef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0197a32b436921fef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da8d3174189c73ec",
            "security_group_rule_id": "sgr-0197a32b436921fef",
            "tags": {
              "Name": "ingress"
            },
            "tags_all": {
              "Name": "ingress"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.aws_ec2.aws_security_group.sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group-rule/sgr-06ddb3308a832cda0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06ddb3308a832cda0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0da8d3174189c73ec",
            "security_group_rule_id": "sgr-06ddb3308a832cda0",
            "tags": {
              "Name": "ingress"
            },
            "tags_all": {
              "Name": "ingress"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.aws_ec2.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.rds_database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184123325:security-group/sg-0ecc9cdd08c7eb812",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecc9cdd08c7eb812",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240601002101257100000002",
            "name_prefix": "terraform-",
            "owner_id": "590184123325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b27a425c98100c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}